manifests/base/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sandbox-app-database
  labels:
    app.kubernetes.io/name: sandbox-app-database
    app.kubernetes.io/part-of: sandbox-app
spec:
  serviceName: sandbox-app-database
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  selector:
    matchLabels:
      app.kubernetes.io/name: sandbox-app-database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sandbox-app-database
        app.kubernetes.io/part-of: sandbox-app
    spec:
      containers:
        - name: database
          image: postgres:17.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: database
              containerPort: 5432
          volumeMounts:
            - name: database-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - test
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - test
            initialDelaySeconds: 30
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 999
        runAsNonRoot: true
        runAsGroup: 999
        runAsUser: 999
        seccompProfile:
          type: RuntimeDefault
  volumeClaimTemplates:
    - metadata:
        name: database-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
