manifests/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-app-database
  labels:
    app.kubernetes.io/name: sandbox-app-database
    app.kubernetes.io/part-of: sandbox-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sandbox-app-database
  ports:
    - name: database
      port: 5432
      targetPort: database
